--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 100vh;
     width: 100%;
-    background-color: rgb(112, 27, 190);
+    background-color: #ffffff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 24px;
     text-align: center;
@@ -13,8 +13,12 @@
   .AppContainer{
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 100%;
+    align-items: center;
+    text-align: left;
+    width: 100px;
+    height: 250px;
+    background-color: #F5F5F5;
   }
+
 
   
