--- a/e-stock/src/pages/stocks/styles.css
+++ b/e-stock/src/pages/stocks/styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     height: 100vh;
     width: 100%;
-    background-color: rgb(112, 27, 190);
+    background-color: #F5F5F5;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 24px;
     text-align: center;
