--- a/e-stock/src/sidebar/styles.css
+++ b/e-stock/src/sidebar/styles.css
@@ -1,24 +1,30 @@
 .sidebar {
-    width: 200px;
+    width: 350px;
     height: 100%;
-    background-color: #f5f5f5;
+    background-color: #F5F5F5;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;  
     justify-content: flex-start;
-    align-items: center;
+    align-items: right center;
   }
   
   .button {
     font-size: 1.2rem;
+    font-weight: bold;
     padding: 1rem 2rem;
     margin: 0.5rem 0;
-    background-color: #fff;
+    background-color: #F5F5F5;
     border: none;
     border-radius: 10px;
     cursor: pointer;
   }
   
   .button:hover {
-    background-color: #e0e0e0;
+    background-color: #ffffff;
+  }
+  .logo_image{
+    width: 35px;
+    height: 35px;
+    align-self: flex-start;
   }
   
