--- a/e-stock/src/pages/stocks/styles.css
+++ b/e-stock/src/pages/stocks/styles.css
@@ -2,16 +2,208 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background-color: #F5F5F5;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 24px;
     text-align: center;
+    justify-content: center;
+   
   }
   .AppContainer{
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 100%;
+    justify-content: center;
   }
+
+  .container {
+    width: 100%;
+    height: 90vh;
+    background-color: #6EC6AD;
+    border-radius: 15px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .header{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    align-items: center;
+    justify-content: center;
+    
+  }
+
+  .header p{
+    font-size: 25px;
+    margin-right: 10px;
+    margin-left: 30px
+
+  }
+
+  .input {
+    color: #8A8ABC;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    
+   
+  }
+
+  .input:focus {
+    border: 2px solid #8A8ABC;
+    outline: none;
+  }
+  
+  
+  .search-container {
+    display: flex;
+    align-items: center;
+    width: 200px;
+  
+  }
+  
+  .search-icon {
+    color: #8A8ABC;
+    font-size: 16px;
+    margin-left: -25px;
+    margin-right: 5px;
+  }
+  
+
+  .select {
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    background-color: #fff;
+    color: #8A8ABC;
+   
+  }
+  
+  .select option {
+    background-color: #fff;
+    color: #000000;
+  }
+
+  .select option:hover{
+    background-color: #fff;
+  }
+  
+  .select:focus {
+    border: 2px solid #8A8ABC;
+    outline: none;
+  }
+  
+
+  
+  .search-icon {
+    color: #8A8ABC;
+    font-size: 16px;
+    margin-left: -25px;
+    margin-right: 5px;
+  }
+  
+  .select-container {
+    display: flex;
+    align-items: center;
+    width: 200px;
+    margin-right: 40px;
+  }
+
+  .actions-container {
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+   
+
+  }
+  .add-product-button{
+    position: relative;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    margin-right: 10px;
+    width: 200px;
+    background-color:#8A8ABC;
+    margin-left: 40px;
+  
+  }
+
+  .add-product-button:hover{
+    background-color:#7070aa;
+  }
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+  
+  .modal {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .modal-content {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    position: relative;
+    z-index: 2;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  
+  .close-modal-button {
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  .close-modal-button:hover,
+  .close-modal-button:focus {
+    color: #8a8abc;
+  }
+
+  .table-container{ 
+    width: 100%;
+    height: 75vh;
+    background-color: #F5F5F5;
+    border-radius: 10px;
+    align-self: center;
+  }
+  
