--- a/e-stock/src/pages/stocks/styles.css
+++ b/e-stock/src/pages/stocks/styles.css
@@ -1,14 +1,17 @@
 .stocks {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: #F5F5F5;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 24px;
     text-align: center;
     justify-content: center;
+    font-family: "Inter";
+    
    
   }
   .AppContainer{
@@ -20,6 +23,7 @@
   }
 
   .container {
+    position: relative;
     width: 100%;
     height: 90vh;
     background-color: #6EC6AD;
@@ -31,6 +35,7 @@
   }
   
   .header{
+    position: relative;
     margin-top: 20px;
     display: flex;
     flex-direction: row;
@@ -43,24 +48,26 @@
   .header p{
     font-size: 25px;
     margin-right: 10px;
-    margin-left: 30px
-
+    margin-left: 30px;
+    color: #060E3B;
+  
   }
 
   .input {
-    color: #8A8ABC;
-    padding: 8px;
+    color: #060E3B;
+    padding: 5px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
-    
+    height: 4.5vh;
+    font-size: large;
    
   }
 
   .input:focus {
-    border: 2px solid #8A8ABC;
+    border: 1px solid #8A8ABC;
     outline: none;
   }
   
@@ -73,22 +80,23 @@
   }
   
   .search-icon {
-    color: #8A8ABC;
-    font-size: 16px;
+    color: #060E3B;
+    font-size: 20px;
     margin-left: -25px;
     margin-right: 5px;
   }
-  
 
   .select {
     padding: 8px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
     background-color: #fff;
-    color: #8A8ABC;
+    color: #060E3B;
+    height: 6vh;
+    font-size: large;
    
   }
   
@@ -102,18 +110,11 @@
   }
   
   .select:focus {
-    border: 2px solid #8A8ABC;
+    border: 1px solid #8A8ABC;
     outline: none;
   }
   
 
-  
-  .search-icon {
-    color: #8A8ABC;
-    font-size: 16px;
-    margin-left: -25px;
-    margin-right: 5px;
-  }
   
   .select-container {
     display: flex;
@@ -133,15 +134,18 @@
     position: relative;
     padding: 8px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
     margin-right: 10px;
-    width: 200px;
+    width: 150px;
     background-color:#8A8ABC;
     margin-left: 40px;
-  
+    font-size: large;
+    height: 6.1vh;
+    
+
   }
 
   .add-product-button:hover{
@@ -154,7 +158,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 251, 251, 0.301);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -162,41 +166,52 @@
   }
   
   .modal {
-    background-color: #fff;
+    position: relative;
+    background-color: #E8E6FE;
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     width: 500px;
-    height: 300px;
+    height: 320px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: "Inter";
+  }
+
+  .modal-content{
+    position: relative;
+    justify-content: center;
+  }
+
+  .modal-header{
+    position:relative;
+    margin-left: 40px;
+    margin-top: -4vh;
+    color:#060E3B;
+    display: flex;
+    flex-direction: row;
+    justify-content: center ;
+    font-size: large;
+    margin-bottom: 10px;
   }
   
-  .modal-content {
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-    position: relative;
-    z-index: 2;
-    max-width: 500px;
-    margin: 0 auto;
-  }
   
   .close-modal-button {
-    top: 10px;
-    right: 10px;
+    position: relative;
+    right: -8.5vw;
+    top: -1vh;
     background: none;
     border: none;
-    font-size: 1.5rem;
+    font-size: 3rem;
     cursor: pointer;
     outline: none;
+    color:#060E3B;
   }
   
   .close-modal-button:hover,
   .close-modal-button:focus {
-    color: #8a8abc;
+    color: #7070aa;
   }
 
   .table-container{ 
@@ -207,3 +222,104 @@
     align-self: center;
   }
   
+  .form{
+    display: flex;
+    justify-content: center ;
+    font-size: large;
+    margin-top: -2vh;
+    text-align: center;
+  }
+  
+  .modal-button{
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 200px;
+    background-color:#8A8ABC;
+    font-size: small;
+    height: 5vh;
+    margin-top: 20px;
+    font-weight: bold;
+  }
+
+  .modal-button:hover{
+    background-color:#7070aa;
+  }
+
+  .modal-input{
+    display: flex;
+    justify-content: center;
+    color: #060E3B;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 450vw;
+    max-width: 450px;
+    height: 3.5vh;
+    font-size: large;
+    margin-top: 10px;
+   
+
+  }
+  .modal-input:focus {
+    border: 1px solid #8A8ABC;
+    outline: none;
+  }
+
+  .expiry{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ 
+  }
+
+  .expiry-input{
+
+    color: #060E3B;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 450vw;
+    max-width: 450px;
+    height: 3.5vh;
+    font-size: large;
+    margin-top: 10px;
+
+  }
+
+  .expiry-input:focus {
+    border: 1px solid #8A8ABC;
+    outline: none;
+   
+  }
+
+  .calendar-icon{
+    color: #060E3B;
+    font-size: 20px;
+    margin-left: -25px;
+    margin-right: 5px;
+    margin-top: 8px;
+  }
+
+  .categories{
+    color: #060E3B;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 460px;
+    height: 5.1vh;
+    font-size: large;
+    margin-top: 10px;
+  }
+
+  .categories:focus{
+    border: 1px solid #8A8ABC;
+    outline: none;
+  }
+  .categories option:hover {
+    background-color: green;
+  }
