--- a/e-stock/src/pages/stocks/styles.css
+++ b/e-stock/src/pages/stocks/styles.css
@@ -214,13 +214,7 @@
     color: #7070aa;
   }
 
-  .table-container{ 
-    width: 100%;
-    height: 75vh;
-    background-color: #F5F5F5;
-    border-radius: 10px;
-    align-self: center;
-  }
+ 
   
   .form{
     display: flex;
@@ -323,27 +317,57 @@
   .categories option:hover {
     background-color: green;
   }
+
+  .table-container {
+    width: 100%;
+    height: 75vh;
+    background-color: #F5F5F5;
+    border-radius: 10px;
+    align-self: center;
+    overflow-y: scroll; /* add a scroll bar for vertical overflow */
+  }
+  
   .table {
     border-collapse: collapse;
     width: 100%;
   }
   
-
   .table td {
-    padding: 8px;
-    text-align: center;
-    font-size: smaller;
+    color: #060E3B;
+    padding: 15px;
+    font-size: 16px;
+    text-align: left;
+    border-bottom: 1px solid #060E3B;
   }
   
   .table th {
-    background-color: #ddd;
+    color: #060E3B;
+    position: sticky;
+    top: 0;
+    right: 10;
+    background-color: #faf7f7;
     font-weight: bold;
-    padding: 8px;
-    text-align: center;
+    padding: 15px 8px;
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 10px;
+    font-size: 16px;
+    border-bottom: 2px solid #060E3B;
   }
   
-  .table tr:nth-child(even) {
-    background-color: #f2f2f2;
+  .table thead {
+    position: sticky;
+    top: 0;
+    background-color: #faf7f7;
+    border-bottom: 2px solid #060E3B;
+  }
+  
+  .table th:first-child {
+    left: 0;
+    position: sticky;
+    z-index: 1;
+    background-color: #faf7f7;
+    border-bottom: 2px solid #060E3B;
   }
   
   .table tr:hover {
