--- a/e-stock/src/pages/stocks/styles.css
+++ b/e-stock/src/pages/stocks/styles.css
@@ -267,6 +267,7 @@
 
   .expiry{
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
  
@@ -335,17 +336,21 @@
   .table {
     border-collapse: collapse;
     width: 100%;
+    text-align: center;
   }
+
   
   .table td {
     color: #060E3B;
     padding: 15px;
     font-size: 16px;
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid #060E3B;
   }
   
   .table th {
+    
+    flex-direction: row;
     color: #060E3B;
     position: sticky;
     top: 0;
@@ -353,15 +358,13 @@
     background-color: #faf7f7;
     font-weight: bold;
     padding: 15px 8px;
-    text-align: left;
-    margin-left: 20px;
-    margin-right: 10px;
+    text-align: center;
     font-size: 16px;
     border-bottom: 2px solid #060E3B;
   }
   
   .table thead {
-    position: sticky;
+
     top: 0;
     background-color: #faf7f7;
     border-bottom: 2px solid #060E3B;
@@ -377,5 +380,6 @@
   
   .table tr:hover {
     background-color: #ddd;
+    
   }
   
