--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -1,5 +1,14 @@
+.AppContainer{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+
 .dashboard {
   display: grid;
+  width: 100%;
   margin-left: 30px;
   height: 100vh;
   font-size: 24px;
@@ -18,6 +27,7 @@
   align-items: center;
   color: #060E3B;
   text-decoration: none;
+  position: relative;
 }
 .Header-container{
   grid-area: 1 / -1 / 2 / 4;
@@ -27,6 +37,7 @@
   font-size: 1.2rem;
   font-weight: bold;
   padding: 0 30px;
+  position: relative;
 }
 .dashboard-text {
   align-self: flex;
@@ -125,6 +136,7 @@
   border-radius: 20px;
   height: 200px;
   width: 275px;
+ 
 }
 
 .cardt-text {
@@ -157,4 +169,44 @@
   width: 275px;
 }
 
+@media only screen and (max-width: 768px) {
+  .dashboard {
+    display: block;
+    margin-left: 0;
+    grid-column-gap: 0;
+  }
+  
+  .Header-container {
+    font-size: 1rem;
+  }
+  
+  .analytic-text {
+    font-size: 30px;
+  }
+  
+  .Carda-main {
+    height: 50%;
+  }
+  
+  .swbutton {
+    width: 80%;
+  }
+  
+  .bitem {
+    width: 80%;
+  }
+  
+  .Cardb-main {
+    width: 80%;
+  }
+  
+  .Cardc-main {
+    width: 80%;
+    margin: 0 auto;
+  }
+  
+  .Cardd-main {
+    width: 80%;
+  }
+}
 
