--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -1,4 +1,5 @@
 .AppContainer{
+  position: relative;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -7,13 +8,15 @@
 }
 
 .dashboard {
+  position: relative;
   display: grid;
   width: 100%;
   margin-left: 30px;
   height: 100vh;
   font-size: 24px;
-  grid-column-gap: 460px;
+  grid-column-gap: 35%;
   font-family: "Inter"; 
+  padding: 0;
 }
 .swbutton {
   font-size: .9rem;
@@ -27,7 +30,7 @@
   align-items: center;
   color: #060E3B;
   text-decoration: none;
-  position: relative;
+  
 }
 .Header-container{
   grid-area: 1 / -1 / 2 / 4;
@@ -37,7 +40,7 @@
   font-size: 1.2rem;
   font-weight: bold;
   padding: 0 30px;
-  position: relative;
+
 }
 .dashboard-text {
   align-self: flex;
