--- a/e-stock/src/sidebar/styles.css
+++ b/e-stock/src/sidebar/styles.css
@@ -18,7 +18,7 @@
   flex-direction: column; 
   align-items: right center;
   flex: 1;
-  margin: 6rem 0.5rem;
+  margin: 5rem 0.5rem;
   
 }
 
@@ -86,7 +86,8 @@
 
 .photo_img{
   display: flex;
-  position: bottom 0;
+  position: fixed;
+  bottom: 0;
   width: 200px;
   height: 250px;
   margin: 20px;
