--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -114,17 +114,25 @@
   height: 200px;
   width: 435px;
 } 
-      .bitem {
-      padding: 10px;
-      background-color: #ffffff;
-      margin: 16px;
-      margin-left: 30px;
-      margin-right: 30px;
-      border-radius: 10px;
-      height: 20px;
-      width: 350px;  
-}      
+.bitem {
+  padding: 10px;
+  background-color: #ffffff;
+  margin: 16px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+  height: 20px;
+  width: 350px;
+  display: flex;
+  flex-direction: row;  
+}
+
+.bitem > * {
+  margin: 0 auto;
+}
+
       .bitem-list {
+    
         list-style: none;
         padding: 0;
         color: #060E3B;
