--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -127,7 +127,11 @@
   display: flex;
   flex-direction: row;  
 }
-
+.itemContainer{
+  height: 195px;
+  width: 435px;
+  overflow: auto;
+}
 .bitem > * {
   margin: 0 auto;
 }
