--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -85,6 +85,8 @@
       margin-left: -7px; 
 }
       .aitem {
+      display: flex;
+      flex-direction: row;
       padding: 15px;
       background-color: #67BBA3;
       margin: 16px;
@@ -92,6 +94,26 @@
       border-radius: 10px;
       height: 20px;
       width: 750px;
+
+}
+
+.aitemContainer{
+  height: 250px;
+  padding: 20px;
+  overflow: auto;
+ 
+ 
+}
+
+.aitem-a{
+  height: 20px;
+  width: 375px
+}
+.aitem-q{
+  width: 375px;
+  text-align: right;
+  height: 20px;
+
 }
 .InnerCarda_main {
   background-color: #f5f5f5;
