--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -271,6 +271,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 .modalContainer{
   position: relative;
