--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -274,16 +274,75 @@
   z-index: 999;
 }
 .modalContainer{
-  position: relative;
+    width: 500px;
+    height: 200px;
     background-color: #E8E6FE;
     border-radius: 8px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    width: 500px;
-    height: 320px;
-    display: flex;
     flex-direction: column;
+    display: flex;
     align-items: center;
-    justify-content: center;
-    font-family: "Inter";
+    padding: 25px;
+}
+.modalContainer .modtitle{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Inter";
+  margin-top: 10px;
+}
+.butcont{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Inter";
+  gap: 50px;
+}
+.closecont{
+  display: flex;
+  justify-content: flex-end;
+  align-self: flex-end;
+}
+.closecont button{
+  background-color: transparent;
+  border: none;
+  font-size: 25px;
+  cursor: pointer;
+}
 
+.swicon{
+  width: 150px;
+  height: 150px;
+  align-items: center;
+  display: flex;
+}
+
+.modalCont{
+  width: 350px;
+  height: 500x;
+  background-color: #E8E6FE;
+  border-radius: 8px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  padding: 25px;
+}
+
+.butcontain{
+
+  font-family: "Inter";
+  gap: 50px;
+}
+
+.modal-but{
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  width: 360px;
+  background-color:#8A8ABC;
+  font-size: small;
+  height: 5vh;
+  margin-top: 20px;
+  font-weight: bold;
 }
