--- a/e-stock/src/pages/dashboard/styles.css
+++ b/e-stock/src/pages/dashboard/styles.css
@@ -318,7 +318,7 @@
 }
 
 .modalCont{
-  width: 350px;
+  width: 280px;
   height: 500x;
   background-color: #E8E6FE;
   border-radius: 8px;
@@ -337,12 +337,38 @@
 
 .modal-but{
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  width: 360px;
+  width: 180px;
   background-color:#8A8ABC;
   font-size: small;
   height: 5vh;
   margin-top: 20px;
   font-weight: bold;
+}
+
+.swmodal-input{
+  display: flex;
+  justify-content: center;
+  color: #060E3B;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  width: 450vw;
+  max-width: 250px;
+  height: 3.5vh;
+  font-size: large;
+  margin-top: 45px;
+ 
+
+}
+.modal-input:focus {
+  border: 1px solid #8A8ABC;
+  outline: none;
+}
+.error{
+  font-size: 12px;
+  color: red;
+  margin-top: 10px;
 }
